--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mmtreasure",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "dev": "nodemon backend/server.js",
     "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
