--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,8 +28,10 @@
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.1.1",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.28.0",
+    "react-toastify": "^11.0.5",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
